  * Remove build system support for FHS 2.1 and FSSTND, mostly commented out.
  * Remove more temporary files created by the build.
  * Remove the FSSTND license from debian/copyright; no FSSTND files are
    currently part of policy.
  * Update FHS copyright dates in debian/copyright.
  * Standardize the spacing around headings in upgrading-checklist.html.

 --

debian-policy (3.7.3.0) unstable; urgency=low

  * Bug fix: "FTBFS if built twice in a row"                 (Closes: #424212).
  * Bug fix: "[PROPOSAL] Document ~ behavior in version numbers", thanks
    to Nicolas François and Marc Brockschmidt                (Closes: #382612).
  * Bug fix: "Please add 'local' to list of supra-POSIX features that
    /bin/sh can be expected to offer". Also add test -a/-o binary logical
    operators and change references from POSIX to SUSv3      (Closes: #294962).
  * Bug fix: "[Proposal] new Debian menu structure", thanks to Bill
    Allombert                                                (Closes: #361418).
  * Bug fix: "typo: "must not be not world-writable"", thanks to Sam
    Hocevar                                                  (Closes: #392594).
  * Bug fix: "debian-policy: recommend binary:Version substvar instead",
    thanks to Guillem Jover                                  (Closes: #418444).
  * Bug fix: "New virtual package: dictd-dictionary", thanks to Tatsuya
    Kinoshita                                                (Closes: #413575).
  * The virtual package in use is inet-superserver, not inetd-superserver.
    Adjust the virtual package list to match.  Thanks, Tatsuya Kinoshita
    and Marco d'Itri.
  * Wrapped, cleaned up trailing whitespace, and alphabetized the list of
    virtual packages.
  * Bug fix: "Small spelling errors and erratic sentences in debian-policy",
    thanks to Michiel de Boer.                               (Closes: #435207).
  * Bug fix: "Source field of .changes files may contain a version number"