@@ -1,217 +1,0 @@
-2006-10-02  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy.sgml (Build-Depends):
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-26
-		  Fix spelling error in "dependency"
-
-2006-06-20  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-21
-		  Fix FSF email address
-		  Text Documentation --> Plain text documentation, since
-		  the meaning appeared unclear. 
-
-	* perl-policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-24
-		  Fix FSF email address 
-
-	* menu-policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-24
-		  Fix FSF email address
-
-	* mime-policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-24
-		  Fix FSF email address 
-
-2006-06-19  Manoj Srivastava  <srivasta@debian.org>
-
-	* upgrading-checklist.html (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-20
-		  Typo fixes. 
-
-	* policy.sgml (INSTALL_DIR):
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-20
-		  typo fix: s/s/a/ 
-		  Add "is"
-		  Clarify the fact that most fields can have multi line
-		  values in control files, apart from the Uploaders field.
-		  Since the packaging system can handle multi line fields
-		  anyway, it does not make sense to prohibit them in
-		  policy. 
-		  Mention the need to have a copyright file in the source
-		  package section as well. 
-
-2006-05-03  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy.sgml (INSTALL_DIR):
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-17
-		  Clarified when it may be reasonable to violate the
-		  standard directive that shared libraries must be
-		  compiled with  -fPIC, and static libraries without,
-		  added the protocol to be followed  when doing so. 
-
-2006-04-26  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.7--patch-14
-		  Added an informative footnote to document the fact that
-		  while dpkg does handle changes to file
-		  ownership/permissions on upgrade, ownership or
-		  permissions on directories already on the system are not
-		  modified. 
-	  (Version): Disambiguate the overloaded use of section for main,
-		  contrib, non-free as well as for admin, lib,devel,
-		  etc. Various fixes based on a 1999 nit picking message
-		  from Joey Hess 
-
-2006-04-25  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy-process.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-16
-		  Minor typo fix 
-
-	* upgrading-checklist.html (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  Document the fact that cgi executable location is
-		  changing, and that web servers need to provide script
-		  aliases.  
-	  (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  mentioned the change to FHS 2.3 
-	  (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  When scripts are installed into into a  directory in the
-		  system PATH, the script name should not include
-		  aextension that denotes the scripting language currently
-		  used to implement it.
-
-	* policy.sgml (http):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  [PENDING AMENDMENT 20/01/2000] Splitting cgi-bin. Since
-		  most web servers do include this, it seems like it is
-		  about time. 
-		  (Version):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  Changed the default version we refer to in
-		  policy to version 2.3, and added in specific
-		  exceptions t the new version of the FHS. 
-	  (Package):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  Mention that all fileds, except the Uploaders, are
-		  supposed to be a single logical line, which may be
-		  spread over multiple physical lines (newline followed by
-		  space is elided). Also mention that anything  parsing
-		  the control file must allow for a multi-line uploaders
-		  field. 
-	  (INSTALL_DIR):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-15
-		  When scripts are installed into into a  directory in the
-		  system PATH, the script name should not include an
-		  extensionthat denotes the scripting language currently
-		  used to  implement it. 
-		  No longer specify the full list of common license
-		  files,since the list gets out dated with newer
-		  versions of license files. 
-		  Punt to dpkg-architecture to providing legal
-			  architecture strings, since that's what is used
-			  by everyone anyway.  The version in policy was
-			  wrong, but that s=does not seem to  have
-			  hindered anyone, which indicates that this
-			  policy directive was uneeded. Now the
-			  dpkg-architecture list is deemed authoritative,
-			  which  it is, and the format is in an
-			  informative foot note. 
-		  Make use of invoke-rc.d mandatory when calling initscripts. 
-		  Changed various X related paths to reflect the move over
-			  to Xorg, and away from /usr/X11R6. 
-
-2005-12-26  Manoj Srivastava  <srivasta@debian.org>
-
-	* policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-6
-		  Mention config files, with a proper reference in the
-		  maintainer scripts area 
-
-2005-12-24  Manoj Srivastava  <srivasta@debian.org>
-
-	* perl-policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-8
-		  Typo fix (as -> at) 
-
-	* policy.sgml:
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-6
-		  Policy does not describe the current tasksel/tasks
-		  situation very well. After correctiong the errors, and
-		  eliminating obsolete paragraphs, therewas nothing that a
-		  general maintainer needs to do about tasksel task
-		  selection, it makes no sense to have this section in
-		  policy. removed.  
-		  One of the examples listed in B.1 is not correct and
-		  does not work. Three problems.  One is that 'xof' does
-		  not write to stdout, 'xOf' does.  Another is
-		  that filenames in debs start with "./" and so
-		  the listed file will not be matched.  Third is
-		  that f needs a filename and "-" is usually the
-		  tradition, but hyphen problems with fonts
-		  probably caused it to be dropped.  That last
-		  probably needs a special crosscheck to make sure
-		  it makes it through the formatting. 
-	  (INSTALL):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-6
-		  typo fix.
-		  Fixed up the description, and summary, of the maintainer
-		  scripts call sequence. 
-		  remove obsolete footnote statements about UTF-8
-		  Erase mention of obsolete non-US section
-		  (Package):
-			  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-6
-			  The format field of .dsc is now mandatory 
-
-2005-06-18  Manoj Srivastava  <srivasta@debian.org>
-
-	* virtual-package-names-list.txt (Format):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-5
-		  Added x-session-manager 
-	  (Format):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-5
-		  Added the section on Scheme and interpreters, which
-		  includes: scheme-r4rs scheme-r5rs scheme-ieee-11878-1900
-		  scheme-srfi-0 scheme-srfi-7 scheme-srfi-55 
-	  (Format):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-5
-		  Added x-display-manager  
-
-	* upgrading-checklist.html (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-4
-		  Fixed a type (missing /) 
-
-2005-06-16  Manoj Srivastava  <srivasta@debian.org>
-
-	* upgrading-checklist.html (issue):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--patch-1
-		  Document the fact that HTTP servers are recommended to
-		  provide an /image alias for packages to share images
-		  with the server.
-
-	* policy.sgml (http):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--base-0
-		  The proposal states that /usr/share/images/<package> and
-		  can be referred to as
-		  http://localhost/images/<package>/<filename. This allows
-		  a simple solution to making images in packages
-		  accessible to the HTTP server without having to resort
-		  to symbolic links. 
-
-		Various spelling errors were also corrected in a spell
-		check run. 
-
-		  Provide the URL for the down-loadable version of policy
-		  documents in various formats, instead of just providing
-		  a link. 
-
-	* virtual-package-names-list.txt (Format):
-		  srivasta@debian.org--etch/debian-policy--devel--3.6--base-0
-		  Removed aspell-dictionary, as  requested by the package
-		  maintainers, as it is no longer in use. 
-
